@@ -4557,6 +4557,10 @@ allowed for $y$ to be shorter than $x$.
 of $x$ and $y$ (which is the logical \kbd{and}). It is allowed for $y$ to be
 shorter than $x$.
 
+\fun{void}{F2v_negimply_inplace}{GEN x, GEN y} replaces $x$ by the term-by term
+logical \kbd{and not} of $x$ and $y$. It is allowed for $y$ to be
+shorter than $x$.
+
 \fun{ulong}{F2m_det}{GEN x}
 
 \fun{ulong}{F2m_det_sp}{GEN x}, as \kbd{F2m\_det}, in place (destroys~\kbd{x}).
