@@ -78,7 +78,8 @@ BA   2- [libpari] F2xqX_halfgcd, FFX_halfgcd
     12- [libpari] ff_parse_Tp
     13- new GP function mfisetaquo
     14- [libpari] Qab_tracerel, QabV_tracerel, QabM_tracerel
-BA  15- [libpari] RgXV_to_FlxV, F2v_and_inplace, FlxV_Flv_multieval
+BA  15- [libpari] RgXV_to_FlxV, FlxV_Flv_multieval
+                  F2v_and_inplace, F2v_negimply_inplace
     16- [libpari] ZpX_primedec
 BA  17- [libpari] QM_sqr, FqC_to_mod, ZXQX_gcd, QXQX_gcd
     18- [libpari] radicalu
